--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link rel="stylesheet" href="assets/vendor/normalize.css">
+  <link href="assets/vendor/normalize.css" rel="stylesheet">
   <link href="assets/fonts/css/all.min.css" rel="stylesheet">
 
   <link href="assets/vendor/bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +20,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -472,10 +473,11 @@
   <script src="assets/vendor/jQuery/jquery-3.6.1.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script rel="script" src="assets/js/main.js"></script>
 
   <!-- Controller JS File -->
   <script rel="script" src="controller/Reg_UserController.js"></script>
+  <script rel="script" src="controller/indexController.js"></script>
 
   <!-- Util JS File -->
   <script rel="script" src="util/alert.js"></script>
