User dashboard header added

--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -25,25 +25,37 @@
 </head>
 <body>
 
+    <!-- ======= Header ======= -->
+    <header id="header" class="header fixed-top d-flex align-items-center">
 
-<!-- Vendor JS Files -->
-<script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
-<script src="../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
-<script src="../assets/vendor/jQuery/jquery-3.6.1.min.js "></script>
-<script rel="script" src="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.js"></script>
+        <div class="d-flex align-items-center justify-content-between">
+            <a href="reg_UserDashboard.html" class="logo d-flex align-items-center">
+                <span class="d-none d-lg-block">Easy <span>Rent.</span></span>
+            </a>
+            <i class="bi bi-list toggle-sidebar-btn"></i>
+        </div>
+        <!-- End Logo -->
+    </header>
+    <!-- End Header -->
 
-<!-- Swiper JS -->
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/vendor/jQuery/jquery-3.6.1.min.js "></script>
+    <script rel="script" src="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.js"></script>
 
-<!-- Template Dashboard Main JS File -->
-<script src="../assets/js/dashboardMain.js"></script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
-<!-- Controller JS File -->
-<script src="../controller/regUserDashboardController.js"></script>
+    <!-- Template Dashboard Main JS File -->
+    <script src="../assets/js/dashboardMain.js"></script>
 
-<!-- Util JS File -->
-<script src="../util/alert.js" rel="script"></script>
-<script src="../util/validation.js" rel="script"></script>
+    <!-- Controller JS File -->
+    <script src="../controller/regUserDashboardController.js"></script>
+
+    <!-- Util JS File -->
+    <script src="../util/alert.js" rel="script"></script>
+    <script src="../util/validation.js" rel="script"></script>
 
 </body>
 </html>
