--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -45,6 +45,17 @@
                     </a>
                 </li>
                 <!-- End Search Icon-->
+
+                <li class="nav-item dropdown pe-3">
+
+                    <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
+                        <img src="../assets/img/massage/profile-img.jpg" alt="Profile" class="rounded-circle">
+                        <span class="d-none d-md-block dropdown-toggle ps-2">K.L Nimal</span>
+                    </a>
+                    <!-- End Profile Iamge Icon -->
+
+                </li>
+                <!-- End Profile Nav -->
             </ul>
         </nav>
         <!-- End Icons Navigation -->
