--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -115,6 +115,47 @@
     <aside id="sidebar" class="sidebar">
 
         <ul class="sidebar-nav" id="sidebar-nav">
+
+            <li class="nav-item">
+                <a class="nav-link" id="userDashboardSection">
+                    <i class="bi bi-grid"></i>
+                    <span>Dashboard</span>
+                </a>
+            </li>
+            <!-- End Dashboard Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" id="myDetailsSection">
+                    <i class="bi bi-kanban"></i>
+                    <span>Profile Details</span>
+                </a>
+            </li>
+            <!-- End Details Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" id="rentSection">
+                    <i class="bi bi-car-front"></i>
+                    <span>Rent Car</span>
+                </a>
+            </li>
+            <!-- End Rent Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" id="bookingResponseSection">
+                    <i class="bi bi-journal-bookmark-fill"></i>
+                    <span>Booking Response</span>
+                </a>
+            </li>
+            <!-- End Rent Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="login.html">
+                    <i class="bi bi-box-arrow-in-right"></i>
+                    <span>LogOut</span>
+                </a>
+            </li>
+            <!-- End Login Page Nav -->
+
         </ul>
 
     </aside>
