--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -110,7 +110,6 @@
     </header>
     <!-- End Header -->
 
-
     <!-- ======= Sidebar ======= -->
     <aside id="sidebar" class="sidebar">
 
@@ -160,6 +159,16 @@
 
     </aside>
     <!-- End Sidebar-->
+
+    <!-- ======= Main ======= -->
+    <main id="main" class="main">
+
+        <div class="pageTitle">
+            <h1>User Dashboard</h1>
+        </div>
+
+    </main>
+    <!-- End #main -->
 
     <!-- Vendor JS Files -->
     <script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
