--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -165,6 +165,20 @@
 
         <div class="pageTitle">
             <h1>User Dashboard</h1>
+
+            <section class="container-fluid mt-3" id="bookingResponse">
+                <nav>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="">Home</a></li>
+                        <li class="breadcrumb-item active">Booking Details</li>
+                    </ol>
+                </nav>
+
+                <div class="row mt-3">
+                    <div class="card info-card">
+                    </div>
+                </div>
+            </section>
         </div>
 
     </main>
