button content added

--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -176,6 +176,23 @@
 
                 <div class="row mt-3">
                     <div class="card info-card">
+
+                        <!-- start button content-->
+                        <div class="mb-3 mt-5 d-grid gap-1 d-md-flex justify-content-md-center">
+                            <form>
+                                <div class="col col-lg-12 col-sm-8">
+                                    <label class="form-label" for="responseRentId">Rent ID<span
+                                            class="text-danger"></span></label>
+                                    <input class="form-control" id="responseRentId" readonly
+                                           name="rent_Id"
+                                           placeholder="Rent ID" type="text">
+                                </div>
+                            </form>
+                            <button type="button" class="btn btn-danger btn mt-4 m-4  h-50" id="btnDeleteRental">
+                                Delete Rental
+                            </button>
+                        </div>
+                        <!-- end button content-->
                     </div>
                 </div>
             </section>
