--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -193,6 +193,31 @@
                             </button>
                         </div>
                         <!-- end button content-->
+
+                        <!-- start response table content-->
+                        <div class="row mt-1 mt-md-2 mt-lg-4 mm-2 p-2 justify-content-around" style="height: 350px;">
+                            <div class="col-11 justify-content-around sectionBorder"
+                                 style="height: 290px; background: white">
+                                <div class="table-responsive customerTableDiv overflow-auto " style="height: 300px;">
+                                    <table class="table table-light table-striped table-bordered table-hover">
+                                        <thead class="text-dark table-danger text-nowrap text-center  table-bordered">
+                                        <tr>
+                                            <th scope="col">Rent ID</th>
+                                            <th scope="col">User ID</th>
+                                            <th scope="col">Car ID</th>
+                                            <th scope="col">Pick-Up Date</th>
+                                            <th scope="col">Return Date</th>
+                                            <th scope="col">Return Time</th>
+                                            <th scope="col">Location</th>
+                                            <th scope="col">Rent Type</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="tblResponse"></tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- end response table content-->
                     </div>
                 </div>
             </section>
