rent detail section added

--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -165,7 +165,6 @@
 
         <div class="pageTitle">
             <h1>User Dashboard</h1>
-
             <section class="container-fluid mt-3" id="bookingResponse">
                 <nav>
                     <ol class="breadcrumb">
@@ -220,6 +219,15 @@
                         <!-- end response table content-->
                     </div>
                 </div>
+            </section>
+
+            <section class="container-fluid mt-3" id="rentDetails">
+                <nav>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="">Home</a></li>
+                        <li class="breadcrumb-item active">Rent</li>
+                    </ol>
+                </nav>
             </section>
         </div>
 
