--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -228,6 +228,27 @@
                         <li class="breadcrumb-item active">Rent</li>
                     </ol>
                 </nav>
+
+                <div class="row mt-3">
+                    <div class="card info-card">
+                        <div class="col col-lg-12">
+                            <div class="row col-12 m-2 p-2  justify-content-lg-center">
+                                <di class="row col-lg-6 gap-3 gap-lg-0 col-md-5 col-sm-6 col-xs-3 justify-content-md-around">
+                                    <div class="col-lg-6">
+                                        <label class="form-label" for="rent_Id">Rent Id</label>
+                                        <input type="text" name="rent_Id" class="form-control" id="rent_Id"
+                                               readonly placeholder="REN-001">
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <label class="form-label" for="user_Id">User Id</label>
+                                        <input type="text" name="user_Id" class="form-control" id="user_Id"
+                                               readonly placeholder="C00-001">
+                                    </div>
+                                </di>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>
 
