--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -245,6 +245,25 @@
                                                readonly placeholder="C00-001">
                                     </div>
                                 </di>
+                                <div class="row col-lg-6 gap-3 gap-lg-0 d-flex col-md-5 col-sm-6 col-xs-3 justify-content-md-around">
+                                    <div class="col-lg-6">
+                                        <label class="form-label" for="category_type">Category</label>
+                                        <select class="form-control" id="category_type" name="category_type">
+                                            <option>Choose Type..</option>
+                                            <option value="GENERAL">GENERAL</option>
+                                            <option value="LUXURY">LUXURY</option>
+                                            <option value="PREMIUM">PREMIUM</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <label class="form-label" for="fuel_Type">Fuel Type</label>
+                                        <select class="form-control" id="fuel_Type" name="fuel_Type">
+                                            <option>Choose Type..</option>
+                                            <option value="DIESEL">DIESEL</option>
+                                            <option value="PETROL">PETROL</option>
+                                        </select>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
