image load added

--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -267,6 +267,36 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="card info-card">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="row">
+                                    <div class="col-lg-5">
+                                        <div class="mt-4 " style="padding: 3rem;border: 2px solid black">
+                                            <div class="swiper mySwiper">
+                                                <div class="swiper-wrapper">
+                                                    <div id="imageLoad1" class="swiper-slide" style="height: 345px"></div>
+                                                    <div id="imageLoad2" class="swiper-slide" style="height:345px"></div>
+                                                    <div id="imageLoad3" class="swiper-slide" style="height:345px"></div>
+                                                    <div id="imageLoad4" class="swiper-slide" style="height:345px"></div>
+                                                </div>
+                                                <div class="swiper-button-next"></div>
+                                                <div class="swiper-button-prev"></div>
+                                                <div class="swiper-pagination"></div>
+                                                <div class="autoplay-progress">
+                                                    <svg viewBox="0 0 48 48">
+                                                        <circle cx="24" cy="24" r="20"></circle>
+                                                    </svg>
+                                                    <span></span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
