rent detail table added

--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -362,6 +362,31 @@
                         </div>
                     </div>
                 </div>
+                <div class="card info-card">
+                    <!-- View Customer Details Table Start -->
+                    <div class="row mt-1 mt-md-2 mt-lg-4 mm-2 p-2 justify-content-around" style="height: 350px;">
+                        <div class="col-11 justify-content-around sectionBorder"
+                             style="height: 290px; background: white">
+                            <div class="table-responsive customerTableDiv overflow-auto " style="height: 300px;">
+                                <table class="table table-light table-striped table-bordered table-hover">
+                                    <thead class="text-dark table-danger text-center  table-bordered sticky-top">
+                                    <tr>
+                                        <th scope="col">Car Id</th>
+                                        <th scope="col">PickUp Date</th>
+                                        <th scope="col">PickUp Time</th>
+                                        <th scope="col">Return Date</th>
+                                        <th scope="col">Return Time</th>
+                                        <th scope="col">Request Type</th>
+                                        <th scope="col">Location</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody id="cartTable"></tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- View Customer Details Table End -->
+                </div>
             </section>
         </div>
 
