profile detail section added

--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -165,6 +165,7 @@
 
         <div class="pageTitle">
             <h1>User Dashboard</h1>
+
             <section class="container-fluid mt-3" id="bookingResponse">
                 <nav>
                     <ol class="breadcrumb">
@@ -267,7 +268,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="card info-card">
                         <div class="row">
                             <div class="col-lg-12">
@@ -291,7 +291,6 @@
                                                     <span></span>
                                                 </div>
                                             </div>
-
                                         </div>
                                     </div>
                                     <div class="col-lg-6 p-2">
@@ -387,6 +386,15 @@
                     </div>
                     <!-- View Customer Details Table End -->
                 </div>
+            </section>
+
+            <section class="container-fluid mt-3" id="profileDetails">
+                <nav>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="">Home</a></li>
+                        <li class="breadcrumb-item active">Profile</li>
+                    </ol>
+                </nav>
             </section>
         </div>
 
