card body form added

--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -395,6 +395,25 @@
                         <li class="breadcrumb-item active">Profile</li>
                     </ol>
                 </nav>
+
+                <div class="row mt-3">
+                    <div class="card info-card">
+                        <!-- start card-body -->
+                        <div class="card-body mt-4">
+                            <!-- start row -->
+                            <div class="row">
+                                <!-- start col-->
+                                <div class="col-xl-12">
+                                    <form id="customerDetailsForm" class="row">
+                                    </form>
+                                </div>
+                                <!-- end col-->
+                            </div>
+                            <!-- end row -->
+                        </div>
+                        <!-- end card-body -->
+                    </div>
+                </div>
             </section>
         </div>
 
