--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -405,6 +405,33 @@
                                 <!-- start col-->
                                 <div class="col-xl-12">
                                     <form id="customerDetailsForm" class="row">
+                                        <section id="sec1CustomerDetails" class="col-xl-4">
+                                            <div class="mb-3">
+                                                <label class="form-label" for="cusUserID">User ID<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" readonly id="cusUserID" name="user_Id"
+                                                       placeholder="User ID" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label" for="userFirstName">First Name<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" id="userFirstName" name="firstName"
+                                                       placeholder="First Name" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label" for="userLastName">Last Name<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" id="userLastName" name="lastName"
+                                                       placeholder="Last Name" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label" for="customerContactNo">Contact
+                                                    Number<span
+                                                            class="text-danger"></span></label>
+                                                <input class="form-control" id="customerContactNo" name="contact_No"
+                                                       placeholder="Contact No" type="text">
+                                            </div>
+                                        </section>
                                     </form>
                                 </div>
                                 <!-- end col-->
