customer detail set two added

--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -432,6 +432,32 @@
                                                        placeholder="Contact No" type="text">
                                             </div>
                                         </section>
+                                        <section id="sec2CustomerDetails" class="col-xl-4">
+                                            <div class="mb-3">
+                                                <label class="form-label" for="customerAddress">Address<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" id="customerAddress" name="address"
+                                                       placeholder="Address" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label" for="customerDriverEmail">Email<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" id="customerDriverEmail" name="email"
+                                                       placeholder="Email" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label" for="customerNic">Nic No<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" id="customerNic" name="nic"
+                                                       placeholder="Nic No" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label" for="imgNiC">NIC Image<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" id="imgNiC" name="nic_Img"
+                                                       placeholder="NIC NO" type="file">
+                                            </div>
+                                        </section>
                                     </form>
                                 </div>
                                 <!-- end col-->
