--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -458,6 +458,51 @@
                                                        placeholder="NIC NO" type="file">
                                             </div>
                                         </section>
+                                        <section id="sec3CustomerDetails" class="col-xl-4">
+                                            <div class="mb-3">
+                                                <label class="form-label" for="customerLicence">Licence No<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" id="customerLicence" name="license_No"
+                                                       placeholder="Licence No" type="text">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label" for="imgLicence">Licence Image<span
+                                                        class="text-danger"></span></label>
+                                                <input class="form-control" id="imgLicence" name="license_Img"
+                                                       placeholder="NIC NO" type="file">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="customerUserName" class="form-label">User Name<span
+                                                        class="text-danger"></span></label>
+                                                <div class="input-group has-validation">
+                                                        <span class="input-group-text"
+                                                              id="customerInputGroupPrepend">@</span>
+                                                    <input type="text" class="form-control" id="customerUserName"
+                                                           name="user_Name" placeholder="User Name"
+                                                           aria-describedby="customerInputGroupPrepend" required>
+                                                    <div class="invalid-feedback">
+                                                        Please choose a username.
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="customerPassword" class="form-label">Password<span
+                                                        class="text-danger"></span></label>
+                                                <div class="input-group input-group-merge">
+                                                    <input type="password" id="customerPassword" name="password"
+                                                           class="form-control" placeholder="Password">
+                                                    <div class="input-group-text" data-password="false">
+                                                        <span class="bi bi-eye-slash"></span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="mb-3 d-grid gap-1 d-md-flex justify-content-md-end">
+                                                <button type="button" class="btn btn-warning btn me-md-1"
+                                                        id="updateCustomer">
+                                                    Update
+                                                </button>
+                                            </div>
+                                        </section>
                                     </form>
                                 </div>
                                 <!-- end col-->
