profile img added

--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -511,6 +511,14 @@
                         </div>
                         <!-- end card-body -->
                     </div>
+                    <div class="card info-card">
+                        <div class=" row col-12 mb-3 m-2 p-2 d-flex">
+                            <div class=" col-md-5 col-lg-5 col-sm-5 xs-5 img-fluid m-3 p-3"
+                                 style="border: 2px solid black; height: 400px; " id="photoImg1"></div>
+                            <div class=" col-md-5 col-lg-5 col-sm-5 xs-5 img-fluid m-3 p-3"
+                                 style="border: 2px solid black; height: 400px; " id="photoImg2"></div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
