notification dropdown added

--- a/Front_End/pages/adminPages/CarManage.html
+++ b/Front_End/pages/adminPages/CarManage.html
@@ -42,6 +42,17 @@
                     </a>
                 </li>
                 <!-- End Search Icon-->
+
+                <li class="nav-item dropdown">
+
+                    <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+                        <i class="bi bi-bell"></i>
+                        <span class="badge bg-primary badge-number">4</span>
+                    </a>
+                    <!-- End Notification Icon -->
+                </li>
+                <!-- End Notification Nav -->
+
             </ul>
         </nav>
         <!-- End Icons Navigation -->
