message dropdown added

--- a/Front_End/pages/adminPages/CarManage.html
+++ b/Front_End/pages/adminPages/CarManage.html
@@ -125,7 +125,8 @@
                     <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
                         <i class="bi bi-chat-left-text"></i>
                         <span class="badge bg-success badge-number">3</span>
-                    </a><!-- End Messages Icon -->
+                    </a>
+                    <!-- End Messages Icon -->
 
                 </li>
                 <!-- End Messages Nav -->
