Main Car Manage Nav added

--- a/Front_End/pages/adminPages/CarManage.html
+++ b/Front_End/pages/adminPages/CarManage.html
@@ -337,6 +337,26 @@
     </aside>
     <!-- End Sidebar-->
 
+    <!-- ======= Main ======= -->
+    <main id="main" class="main">
+
+        <!-- ======= Car Manage ======= -->
+        <div class="pageTitle" id="pageFour">
+            <h1>Manage</h1>
+            <section class="container-fluid mt-3" id="manageCar">
+                <nav>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="../adminDashboard.html">Home</a></li>
+                        <li class="breadcrumb-item active">Manage / Cars</li>
+                    </ol>
+                </nav>
+            </section>
+        </div>
+        <!-- End Car Manage -->
+
+    </main>
+    <!-- End #main -->
+
     <!-- Vendor JS Files -->
     <script src="../../assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="../../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
