Search Bar added

--- a/Front_End/pages/adminPages/CarManage.html
+++ b/Front_End/pages/adminPages/CarManage.html
@@ -350,6 +350,18 @@
                         <li class="breadcrumb-item active">Manage / Cars</li>
                     </ol>
                 </nav>
+
+                <div class="row mt-3">
+                    <div class="card info-card">
+                        <div class="search-bar mt-4">
+                            <div class="search-form d-flex align-items-center">
+                                <input type="search" name="car_Id" id="search_Id" placeholder="Search" title="Enter search keyword">
+                                <button type="button" title="Search"><i class="bi bi-search"></i></button>
+                            </div>
+                        </div>
+                        <!-- End Search Bar -->
+                    </div>
+                </div>
             </section>
         </div>
         <!-- End Car Manage -->
