--- a/Front_End/pages/adminPages/CarManage.html
+++ b/Front_End/pages/adminPages/CarManage.html
@@ -360,6 +360,13 @@
                             </div>
                         </div>
                         <!-- End Search Bar -->
+                        <div class="col-12 m-3 p-1">
+                            <form class="row" action="car" id="carForm" method="post">
+                                <section id="sec1Car" class="col-md-4 mt-3">
+
+                                </section>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </section>
