carForm second list added

--- a/Front_End/pages/adminPages/CarManage.html
+++ b/Front_End/pages/adminPages/CarManage.html
@@ -397,6 +397,45 @@
                                         <span class="control-error"></span>
                                     </div>
                                 </section>
+
+                                <section id="sec2Car" class="col-md-4 mt-3">
+                                    <div class="mb-sm-0">
+                                        <label class="form-label" for="side_View">Side View</label>
+                                        <input class="form-control" id="side_View" type="file" name="side_View">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="interior">Interior</label>
+                                        <input class="form-control" id="interior" type="file" name="interior">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="number_Of_Passengers">Number Of Passengers</label>
+                                        <input class="form-control" id="number_Of_Passengers" type="text"
+                                               name="number_Of_Passengers" placeholder="No Of Passengers">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="transmission_Type">Transmission Type</label>
+                                        <select class="form-control" id="transmission_Type" name="transmission_Type">
+                                            <option value="AUTO">AUTO</option>
+                                            <option value="MANUAL">MANUAL</option>
+                                        </select>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="fuel_Type">Fuel Type</label>
+                                        <select class="form-control" id="fuel_Type" name="fuel_Type">
+                                            <option value="DIESEL">DIESEL</option>
+                                            <option value="PETROL">PETROL</option>
+                                        </select>
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="daily_Rate">Daily Rate</label>
+                                        <input class="form-control" id="daily_Rate" type="text" name="daily_Rate" placeholder="Daily Rate">
+                                    </div>
+                                    <span class="control-error"></span>
+                                </section>
                             </form>
                         </div>
                     </div>
