carForm third list added

--- a/Front_End/pages/adminPages/CarManage.html
+++ b/Front_End/pages/adminPages/CarManage.html
@@ -436,6 +436,44 @@
                                     </div>
                                     <span class="control-error"></span>
                                 </section>
+
+                                <section id="sec3Car" class="col-md-4 mt-3">
+                                    <div class="mb-sm-0">
+                                        <label class="form-label" for="monthly_Rate">Monthly Rate</label>
+                                        <input class="form-control" id="monthly_Rate" type="text" name="monthly_Rate" placeholder="Monthly Rate">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="price_Extra_KM">Price Extra KM</label>
+                                        <input class="form-control" id="price_Extra_KM" type="text" name="price_Extra_KM" placeholder="Price Extra KM">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="registration_Number">Registration Number</label>
+                                        <input class="form-control" id="registration_Number" type="text" name="registration_Number" placeholder="Register Number">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="free_Mileage">Free Mileage</label>
+                                        <input class="form-control" id="free_Mileage" type="text" name="free_Mileage" placeholder="Free Mileage">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="color">Color</label>
+                                        <input class="form-control" id="color" type="text" name="color" placeholder="Color">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="vehicleAvailabilityType">Vehicle Availability
+                                            Type</label>
+                                        <select class="form-control" id="vehicleAvailabilityType" name="vehicleAvailabilityType">
+                                            <option value="AVAILABLE">AVAILABLE</option>
+                                            <option value="MAINTAIN">MAINTAIN</option>
+                                            <option value="UNDER_MAINTAIN">UNDER_MAINTAIN</option>
+                                        </select>
+                                        <span class="control-error"></span>
+                                    </div>
+                                </section>
                             </form>
                         </div>
                     </div>
