Car Details Table details added

--- a/Front_End/pages/adminPages/CarManage.html
+++ b/Front_End/pages/adminPages/CarManage.html
@@ -492,6 +492,27 @@
                             <div class="col-11 justify-content-around sectionBorder"
                                  style="height: 290px; background: white">
                                 <div class="table-responsive customerTableDiv overflow-auto " style="height: 300px;">
+                                    <table class="table text-nowrap table-light table-striped table-bordered table-hover">
+                                        <thead class="text-dark table-danger text-center  table-bordered sticky-top">
+                                        <tr>
+                                            <th scope="col">ID</th>
+                                            <th scope="col">Brand</th>
+                                            <th scope="col">Model</th>
+                                            <th scope="col">Type</th>
+                                            <th scope="col">Passengers</th>
+                                            <th scope="col">Transition</th>
+                                            <th scope="col">Fuel</th>
+                                            <th scope="col">Daily Rent</th>
+                                            <th scope="col">Monthly Rent</th>
+                                            <th scope="col">Price KM</th>
+                                            <th scope="col">Reg Number</th>
+                                            <th scope="col">Free Mileage</th>
+                                            <th scope="col">Color</th>
+                                            <th scope="col">Availability</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="carTable"></tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
