user manage main part added

--- a/Front_End/pages/adminPages/Reg_UserManage.html
+++ b/Front_End/pages/adminPages/Reg_UserManage.html
@@ -340,6 +340,18 @@
     </aside>
     <!-- End Sidebar-->
 
+    <!-- ======= Main ======= -->
+    <main id="main" class="main">
+
+        <!-- ======= Customer Manage ======= -->
+        <div class="pageTitle" id="pagetwo">
+            <h1>Manage</h1>
+        </div>
+        <!-- End Customer Manage -->
+
+    </main>
+    <!-- End #main -->
+
     <!-- Vendor JS Files -->
     <script src="../../assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="../../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
