manage customer section added

--- a/Front_End/pages/adminPages/Reg_UserManage.html
+++ b/Front_End/pages/adminPages/Reg_UserManage.html
@@ -346,6 +346,16 @@
         <!-- ======= Customer Manage ======= -->
         <div class="pageTitle" id="pagetwo">
             <h1>Manage</h1>
+
+            <section class="container-fluid mt-3" id="manageCustomer">
+                <nav>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="../adminDashboard.html">Home</a></li>
+                        <li class="breadcrumb-item active">Manage / Customers</li>
+                    </ol>
+                </nav>
+
+            </section>
         </div>
         <!-- End Customer Manage -->
 
