--- a/Front_End/pages/adminPages/Reg_UserManage.html
+++ b/Front_End/pages/adminPages/Reg_UserManage.html
@@ -355,6 +355,16 @@
                     </ol>
                 </nav>
 
+                <div class="row mt-3">
+                    <div class="card info-card">
+                        <div class="search-bar mt-4">
+                            <div class="search-form d-flex align-items-center">
+                                <input type="search" name="user_Id" id="search_Id" placeholder="Search" title="Enter search keyword">
+                                <button type="button" title="Search"><i class="bi bi-search"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>
         <!-- End Customer Manage -->
