--- a/Front_End/pages/adminPages/Reg_UserManage.html
+++ b/Front_End/pages/adminPages/Reg_UserManage.html
@@ -364,6 +364,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card info-card">
+                        <!-- View Customer Details Table Start -->
+                        <div class="row mt-1 mt-md-2 mt-lg-4 mm-2 p-2 justify-content-around" style="height: 350px;">
+                            <div class="col-11 justify-content-around sectionBorder"
+                                 style="height: 290px; background: white">
+                                <div class="table-responsive customerTableDiv overflow-auto " style="height: 300px;">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- View Customer Details Table End -->
+                    </div>
                 </div>
             </section>
         </div>
