--- a/Front_End/pages/adminPages/Reg_UserManage.html
+++ b/Front_End/pages/adminPages/Reg_UserManage.html
@@ -363,6 +363,44 @@
                                 <button type="button" title="Search"><i class="bi bi-search"></i></button>
                             </div>
                         </div>
+                        <!-- End Search Bar -->
+                        <div class="col-12 m-3 p-1">
+                            <form class="row" id="customerForm">
+                                <section id="sec1Customer" class="col-md-4 mt-3">
+                                    <div class="mb-sm-0">
+                                        <label class="form-label" for="user_Id">User Id</label>
+                                        <input type="text" name="user_Id" class="form-control" readonly id="user_Id"
+                                               placeholder="C00-001">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="firstName">First Name</label>
+                                        <input type="text" name="firstName" class="form-control" id="firstName"
+                                               placeholder="First Name">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="lastName">Last Name</label>
+                                        <input type="text" name="lastName" class="form-control" id="lastName"
+                                               placeholder="Last Name">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="contact_No">Contact Number</label>
+                                        <input type="text" name="contact_No" class="form-control" id="contact_No"
+                                               placeholder="Contact Number">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="address">Address</label>
+                                        <input type="text" name="address" class="form-control" id="address"
+                                               placeholder="Address">
+                                        <span class="control-error"></span>
+                                    </div>
+                                </section>
+
+                            </form>
+                        </div>
                     </div>
                     <div class="card info-card">
                         <!-- View Customer Details Table Start -->
