search customer one added

--- a/Front_End/pages/adminPages/Reg_UserManage.html
+++ b/Front_End/pages/adminPages/Reg_UserManage.html
@@ -399,6 +399,37 @@
                                     </div>
                                 </section>
 
+                                <section id="sec2Customer" class="col-md-4 mt-3">
+                                    <div class="mb-sm-0">
+                                        <label class="form-label" for="email">Email</label>
+                                        <input type="text" name="email" class="form-control" id="email"
+                                               placeholder="Email Address">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="nic">NIC NUmber</label>
+                                        <input type="text" name="nic" class="form-control" id="nic"
+                                               placeholder="National ID">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="license_No">Driving License ID</label>
+                                        <input type="text" name="license_No" class="form-control" id="license_No"
+                                               placeholder="Driving License">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="license_Img">NIC Image</label>
+                                        <input type="file" name="nic_Img" class="form-control" id="nic_Img">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="license_Img">Driving License Image</label>
+                                        <input type="file" name="license_Img" class="form-control" id="license_Img">
+                                        <span class="control-error"></span>
+                                    </div>
+                                </section>
+
                             </form>
                         </div>
                     </div>
