--- a/Front_End/pages/adminPages/Reg_UserManage.html
+++ b/Front_End/pages/adminPages/Reg_UserManage.html
@@ -430,6 +430,37 @@
                                     </div>
                                 </section>
 
+                                <section id="sec3" class="col-md-4 mt-3">
+                                    <div class="mb-sm-0">
+                                        <label for="role_Type" class="form-label">Role type</label>
+                                        <select class="form-control" id="role_Type" name="role_Type">
+                                            <option value="REGISTERED_USER">REGISTERED_USER</option>
+                                        </select>
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label for="user_Name" class="form-label">User Name</label>
+                                        <div class="input-group has-validation">
+                                            <span class="input-group-text" id="inputGroupPrepend">@</span>
+                                            <input type="text" name="user_Name" class="form-control" id="user_Name"
+                                                   placeholder="User Name">
+                                            <span class="control-error"></span>
+                                        </div>
+                                    </div>
+                                    <div class="mb-sm-0 mt-3">
+                                        <label class="form-label" for="password">Password</label>
+                                        <input type="password" name="password" class="form-control" id="password"
+                                               placeholder="Enter Password">
+                                        <span class="control-error"></span>
+                                    </div>
+                                    <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
+                                        <button class="btn btn-warning me-md-1" id="btnUpdateCustomer" type="button">
+                                            Update
+                                        </button>
+                                        <button type="button" class="btn btn-danger me-md-1" id="btnDeleteCustomer">Delete
+                                        </button>
+                                    </div>
+                                </section>
                             </form>
                         </div>
                     </div>
