--- a/Front_End/pages/adminPages/DriverManage.html
+++ b/Front_End/pages/adminPages/DriverManage.html
@@ -298,6 +298,18 @@
                     <i class="bi bi-layout-text-window-reverse"></i><span>Details</span><i
                         class="bi bi-chevron-down ms-auto"></i>
                 </a>
+                <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                    <li>
+                        <a href="PaymentDetails.html">
+                            <i class="bi bi-circle"></i><span>Payment Details</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="RentDetails.html">
+                            <i class="bi bi-circle"></i><span>Rent Details</span>
+                        </a>
+                    </li>
+                </ul>
             </li>
             <!-- End View Nav -->
 
